fix(SubHeader): editable text size was too small

--- a/packages/components/src/SubHeaderBar/TitleSubHeader/TitleSubHeader.module.scss
+++ b/packages/components/src/SubHeaderBar/TitleSubHeader/TitleSubHeader.module.scss
@@ -55,6 +55,11 @@ $header-title-max-width: 90rem;
 				line-height: unset;
 				margin: 0;
 			}
+
+			input {
+				width: 30rem;
+			}
+
 		}
 
 		&-subtitle {
